style.css
*{
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-weight: 100;
    box-sizing: border-box; /*Makes sure that padding and boarder are included in total w and h*/
    margin:0;
}

header{
    background-color: #b4b8a6;
    height: 300px;
}

nav{
    padding:10px;
    background-color: #b4b8a6;
    height:50px;
    position:sticky;
    top:0;
}

.iconbar{
    height:40px;
    background-color: #b4b8a6;
    padding-right:20px;
}

.bannerbox{
    background-color: white;
    height:200px;
    width:auto;
    background-size: contain;
}
.bannerimg{
    height:200px;
    display: flex;
    width: 100%;
    justify-content: center;
}
nav li{
    display: inline;
    padding: 0px 10px 0px 10px;
}

li:hover{
    background-color: white;
    color: #b4b8a6;
    font-weight: 200;
}

a{
    color:white;
    text-decoration: none;
}
.tile a{
    color:black;
    text-decoration: none;
}

.thumbnail{
    width: 150px;
    height: 150px;
    object-fit: contain /*Keeps image aspect ratio*/
}
.bar{
    background-color: white;
    display:inline-grid;
    grid-auto-flow: column; /*Forces all to stay in one row*/
    column-gap: 30px;
    width:100%;
    padding: 30px;
    overflow:scroll;
}

.button{
    background-color: #b4b8a6;
    color:white;
    margin: 15px;
    border-radius: 5px;
}
.gallery{
    display:grid;
    grid-template-columns: repeat(auto-fill, 300px);
    gap: 30px;
    justify-content: center;
}

.destinations{
    display:grid;
    grid-template-columns: repeat(auto-fill, 200px);
    gap: 30px;
    justify-content: center;
    text-align: center;
}

.tile:hover{
    opacity: 0.6;
    scale: 1.1;
}

.caption{
    padding: 10px;
    font-size: small;
    text-align: center;
    background-color: white;
}

h1{
    color: black;
    padding: 10px;
    text-align: center;
}

.contactform{
    background-color: white;
    text-align: left;
    /*Needed to specify width then set margin to auto to center*/
    width: 300px;
    margin: auto;
}
  
footer{
    background-color: #b4b8a6;
    position: relative;
    bottom:0;
    margin-top: 50px;
    height:120px;
    width:100%;
    color: white;
    font-size: small;
    padding: 0px 20px 0px 20px;
}

footer li {
    list-style: none;
    float:left;
}

.container{
    width: 100%;
    height: 400px;
    background-image: url('icelandbackground_text.png');
    background-repeat: no-repeat;
}

.picture{
    max-width:100%;
    height:auto;
    background-size: contain;

}

#parent {
    background-image: url("icelandbackground.jpg");
    width: auto;
    height: 400px;
    background-size: cover;
    background-position: center;
}

/*Adds opacity and centers block in middle*/
#overlay {
    width: 100%;
    height: 100%;
    background-color: rgba(255,255,255,0.3);
    display: flex;
    justify-content: center;
    align-items: center;
}
  #content {
    width: 300px;
    height: 200px;
    /*background-color: #b4b8a6;*/
    opacity:1;
    display: flex;
    justify-content: center;
    align-items: center;
  }

.searchbutton{
    width: 30px;
  }

.search{
    float:right;
  }

.icon{
    width: 20px;
    height: 20px;
    float:right;
    margin: 5px;
}

.centered{ /*This is the container*/
    display:flex;
    /*Centered picture horizontally*/
    justify-content: center;
    /*Centered picture vertically*/
    align-items: center;
    }

.profilepic{ /*This is the actual image*/
    height: 350px;
    width: auto;
}

.column {
    float: left;
    width: 47%;
    padding: 10px;
}
.row:after {
    content: "";
    display: table;
    clear: both;
}

@media only screen and (max-width: 600px) {
    .column {
      width: 100%;
    }
    header{
        height: 260px;
    }
    .search{
        display:none;
    }
    .iconbar{
        display:none;
    }
  }

